syntax = "proto3";

package stm;
option go_package = "go/protobuf/stm";


enum STATE {
  UNKNOWN = 0;
  RESPONDING = 1;
  READING = 2;
  GUESSING = 3;
  RESULTS = 4;
}



message Prompt {
    string id = 1;

    string contents = 2;
}

message Response {
    string id = 1;

    string response = 2;
}

message RoleFrame {

    bool guesser = 1;

    bool out = 2;
}


message GuessFrame {

    string prompt_id = 1;

    string response_id = 2;


}

message PromptResponseFrame {

    string prompt_id = 1;

    string response = 2;

}

message PromptResponseInputFrame {
    string prompt_id = 1;
}

message AllResponsesFrame {
    repeated Response responses = 1;
}

message ReadResponseFrame {
    string response_id = 1;
}


message PlayerFrame {

    string player_id = 1;

    oneof frame {

        GameState state = 2;

        GuessFrame guess = 3;

        PromptResponseInputFrame prompt_response_input = 4;

        PromptResponseFrame prompt_response = 5;

        RoleFrame role_change = 6;

        AllResponsesFrame all_responses = 7;

        ReadResponseFrame read_response = 8;

    }

}


message BeginGameReq {

    string room_id = 1;
}

message GameState {

    STATE game_state = 1;

    repeated Prompt prompts = 2;
}



service ShootTheMessenger {

    rpc BeginGame(BeginGameReq) returns (GameState);


    rpc PlayerStream(stream PlayerFrame) returns (stream PlayerFrame);

}
